BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/LockActivityChildren__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This list custom setting keeps track of what child objects of the EM Event (EM_Event_vod) need to be locked down based on the status of the activity</description>
    <fields>
        <fullName>Activity_Lookup_API_Name__c</fullName>
        <description>The API name of the lookup to the activity record</description>
        <inlineHelpText>The API name of the lookup to the activity record</inlineHelpText>
        <label>Activity Lookup API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_Activity_Recordtypes__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <label>Applicable Activity Recordtypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_Parent_Recordtypes__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <description>List of record types that this rule should apply to, separated by commas. By default this is set to &quot;All&quot;, meaning that the rule applies to all record types.</description>
        <inlineHelpText>List of record types that this rule should apply to, separated by commas. By default this is set to &quot;All&quot;, meaning that the rule applies to all record types.</inlineHelpText>
        <label>Applicable Parent Recordtypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateLock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, users will not be able to create records of this object type and link them to an activity of the specified statuses.</description>
        <inlineHelpText>When this field is checked, users will not be able to create records of this object type and link them to an activity of the specified statuses.</inlineHelpText>
        <label>CreateLock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeleteLock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, users will not be able to delete this object when the activity is in the specified statuses.</description>
        <inlineHelpText>When this field is checked, users will not be able to delete this object when the activity is in the specified statuses.</inlineHelpText>
        <label>DeleteLock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EditLock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, users will not be able to edit this object when the activity is in the specified statuses.</description>
        <inlineHelpText>When this field is checked, users will not be able to edit this object when the activity is in the specified statuses.</inlineHelpText>
        <label>EditLock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModifyAllOverride__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this box is checked, admin users with the &quot;Modify All Data&quot; permission will be able to bypass the lock.</description>
        <inlineHelpText>When this box is checked, admin users with the &quot;Modify All Data&quot; permission will be able to bypass the lock.</inlineHelpText>
        <label>ModifyAllOverride</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>The API name of the object.</description>
        <inlineHelpText>The API name of the object.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_API_Name__c</fullName>
        <description>This is the API name of the parent object.</description>
        <inlineHelpText>This is the API name of the parent object.</inlineHelpText>
        <label>Parent API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <description>The API name of the lookup to the parent object</description>
        <inlineHelpText>The API name of the lookup to the parent object</inlineHelpText>
        <label>Parent Lookup API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Status_Field__c</fullName>
        <defaultValue>&quot;Status_vod__c&quot;</defaultValue>
        <description>This is the API name of the field on the parent record that will be checked.</description>
        <inlineHelpText>This is the API name of the field on the parent record that will be checked.</inlineHelpText>
        <label>Parent Status Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Statuses__c</fullName>
        <description>The admins will enter what values of the activity status should lock down the given child object</description>
        <inlineHelpText>Please enter all statuses on the Activity that should lock the child records for this object type. Please separate each status with a comma.</inlineHelpText>
        <label>Parent Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veeva EM Child Locking Setting</label>
</CustomObject>